# dl-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  resnet_utils.py
dl_api/: app.py  dependencies.py
dl_api/dl/: resnet_utils.py
dl_api/routers/: items.py  upload.py
tests/: test_dl_api.py
