[tool.poetry]
name = "dl-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
torch = {url = "https://files.pythonhosted.org/packages/b1/c0/54bb06dc4f3998a3b5e017a6356a7764fd91bba56cf744705ccb565239f0/torch-1.10.0-cp38-cp38-win_amd64.whl"}
numpy = "^1.22.3"
torchvision = "0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
